2/13/2025 2:00: changed dungeon[][]
                added d->map to all functions
2/13/2025 2:20: added new files 
                heap.h and heap.c for path finding